smooth scroll, id fix, id wrap
added smooth scrolling when clicking navbar items

fixed the about/contact page to go correct page

wrapped the home page in an id and added the href to my name to move up to the home page with one click

--- a/portfolio/src/app/globals.css
+++ b/portfolio/src/app/globals.css
@@ -76,3 +76,7 @@ li:hover {
     transform: scale(1.05);
   }
 }
+
+html {
+  scroll-behavior: smooth;
+}
